--- a/catapp/src/main/res/layout/activity_main.xml
+++ b/catapp/src/main/res/layout/activity_main.xml
@@ -58,10 +58,11 @@
         android:id="@+id/imageview"
         android:layout_width="411dp"
         android:layout_height="496dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/list_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_button" />
+        app:layout_constraintTop_toBottomOf="@+id/height_edittext" />
 
     <Button
         android:id="@+id/save_button"
