--- a/nasafinalproject/src/main/res/layout/details_layout.xml
+++ b/nasafinalproject/src/main/res/layout/details_layout.xml
@@ -65,6 +65,7 @@
         android:layout_marginStart="16dp"
         android:text="URL goes here"
         android:autoLink="web"
+        android:textColor="#03A9F4"
         app:layout_constraintTop_toBottomOf="@+id/sendMessage_detail"
         app:layout_constraintStart_toStartOf="parent"/>
 
